<resources>
    <string name="app_name">ArthikaHFT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="prices">Prices</string>
    <string name="orders">Orders</string>
    <string name="positions">Positions</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="select_amount">Select Amount: </string>
    <string name="select_type">Select Order Type: </string>
    <string name="select_validity">Select Validity: </string>
    <string name="select_ti">Select TI: </string>
    <string name="select_price">Select Price: </string>
    <string name="select_account">Select Account: </string>
    <string name="pending_orders">Pending Orders</string>
    <string name="closed_orders">Closed Orders</string>
    <string name="accounting">Accounting</string>
    <string name="show_equity">Show Equity</string>
    <string name="equity">Equity</string>
    <string name="pool_equity">Pool Equity</string>
    <string name="strategy_equity">Strategy Equity</string>
    <string name="swap">Swap</string>
    <string name="cash">Cash</string>
    <string name="security">Security</string>
    <string name="modify">Modify</string>
    <string name="info">Info</string>
    <string name="clear">Clear</string>
    <string name="cancel_all">Cancel All</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="close_all">Close All</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_new_amount">Select New Amount: </string>
    <string name="select_new_price">Select New Price: </string>
    <string name="select_domain">Select Domain: </string>
    <string name="select_interval">Streaming Interval (ms): </string>
    <string name="select_securities">Select Securities: </string>
    <string name="strategy">Strategy: </string>
    <string name="password">Password: </string>
    <string name="domain">Domain: </string>
    <string name="getting_prices">Getting prices</string>
    <string name="streaming_stopped">Streaming stopped</string>
    <string name="click_start">Click \'Start\' for streaming</string>
    <string name="conection_message">"Can not connect to the strategy\nPlease verify your connection settings and internet connection"</string>
    <string name="cancel_order_message1">Do you want to cancel order</string>
    <string name="cancel_all_orders_message">Do you want to cancel ALL orders?</string>
    <string name="close_all_positions_message">Do you want to close ALL positions?</string>
    <string name="close_positions_message">Do you want to close positions for</string>
    <string name="at">at</string>
    <string name="in">in</string>
    <string name="position_info_security">Security</string>
    <string name="position_info_position">Position</string>
    <string name="position_info_side">Side</string>
    <string name="position_info_pl">P&amp;L</string>
    <string name="position_info_closepositions">Close pos.</string>
    <string name="position_info_currency">Currency</string>
    <string name="position_info_exposure">Exposure</string>
    <string name="position_info_totalrisk">Total Risk</string>
    <string name="position_info_strategypl">Strategy PL</string>
    <string name="position_info_totalequity">Total equity</string>
    <string name="position_info_usedmargin">Used margin</string>
    <string name="position_info_freemarginy">Free margin</string>
    <string name="order_info">Order Info</string>
    <string name="order_info_orderid">OrderId</string>
    <string name="order_info_fixid">FixId</string>
    <string name="order_info_tinterface">TInterface</string>
    <string name="order_info_security">Security</string>
    <string name="order_info_quantity">Quantity</string>
    <string name="order_info_limitprice">Limit price</string>
    <string name="order_info_side">Side</string>
    <string name="order_info_type">Type</string>
    <string name="order_info_finishedprice">Finished price</string>
    <string name="order_info_finishedquantity">Finished quantity</string>
    <string name="order_info_commission">Commission</string>
    <string name="order_info_status">Status</string>
    <string name="order_info_price">Price</string>
    <string name="click_chart">Click to chart</string>
    <string name="click_buy">Click to buy</string>
    <string name="click_sell">Click to sell</string>
</resources>
