<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_pop_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/orderInfoTextView"
        android:text="@string/order_info" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/orderInfoTableLayout"
        android:background="@drawable/borderpop"
        android:layout_margin="5dp"
        android:measureWithLargestChild="false"
        android:stretchColumns="2">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_info_orderid"
                android:id="@+id/textView"
                android:layout_weight="0.4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/orderInfoOrderIdTexView"
                android:layout_weight="0.6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_info_fixid"
                android:id="@+id/textView3"
                android:layout_weight="0.4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/orderInfoFixIdTexView"
                android:layout_weight="0.6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_info_tinterface"
                android:id="@+id/textView5"
                android:layout_weight="0.4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/orderInfoTInterfaceTexView"
                android:layout_weight="0.6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_info_security"
                android:id="@+id/textView7"
                android:layout_weight="0.4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/orderInfoSecurityTexView"
                android:layout_weight="0.6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_info_quantity"
                android:id="@+id/textView9"
                android:layout_weight="0.4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/orderInfoQuantityTexView"
                android:layout_weight="0.6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_info_limitprice"
                android:id="@+id/textView11"
                android:layout_weight="0.4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/orderInfoLimitPriceTexView"
                android:layout_weight="0.6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_info_side"
                android:id="@+id/textView13"
                android:layout_weight="0.4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/orderInfoSideTexView"
                android:layout_weight="0.6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_info_type"
                android:id="@+id/textView15"
                android:layout_weight="0.4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/orderInfoTypeTexView"
                android:layout_weight="0.6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_info_finishedprice"
                android:id="@+id/textView17"
                android:layout_weight="0.4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/orderInfoFinishedPriceTexView"
                android:layout_weight="0.6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_info_finishedquantity"
                android:id="@+id/textView19"
                android:layout_weight="0.4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/orderInfoFinishedQuantityTexView"
                android:layout_weight="0.6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_info_commission"
                android:id="@+id/textView21"
                android:layout_weight="0.4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/orderInfoComissionTexView"
                android:layout_weight="0.6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_info_status"
                android:id="@+id/textView23"
                android:layout_weight="0.4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/orderInfoStatusTexView"
                android:layout_weight="0.6" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:id="@+id/orderInfoCloseButton"
            android:background="@drawable/buttonborder"
            android:layout_margin="5dp" />
    </LinearLayout>

</LinearLayout>