<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_pop_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tradeSecTextView" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/select_amount"
            android:id="@+id/selectTradeAmountTextView"
            android:layout_weight="0.5" />

        <Spinner
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:id="@+id/tradeAmountSpinner"
            android:layout_weight="0.5"
            android:background="@drawable/abc_spinner_textfield_background_material" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/select_type"
            android:id="@+id/selectTradeTypeTextView"
            android:layout_weight="0.5" />

        <Spinner
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:id="@+id/tradeTypeSpinner"
            android:layout_weight="0.5"
            android:background="@drawable/abc_spinner_textfield_background_material" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/select_validity"
            android:id="@+id/selectTradeValidityTextView"
            android:layout_weight="0.5" />

        <Spinner
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:id="@+id/tradeValiditySpinner"
            android:layout_weight="0.5"
            android:background="@drawable/abc_spinner_textfield_background_material" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/select_ti"
            android:id="@+id/selectTradeTITextView"
            android:layout_weight="0.5" />

        <Spinner
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:id="@+id/tradeTISpinner"
            android:layout_weight="0.5"
            android:background="@drawable/abc_spinner_textfield_background_material" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/select_price"
            android:id="@+id/selectTradePriceTextView"
            android:layout_weight="0.5" />

        <EditText
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/tradePriceEditText"
            android:layout_weight="0.5" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tradeMessageTextView"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/tradeCancelButton"
            android:layout_weight="0.5"
            android:background="@drawable/buttonborder"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/tradeOKButton"
            android:layout_weight="0.5"
            android:background="@drawable/buttonborder"
            android:layout_margin="5dp" />
    </LinearLayout>

</LinearLayout>