<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/my_menu_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:layout_weight="0.5">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/pending_orders"
                    android:id="@+id/pendingOrderTextView"
                    android:layout_weight="0.39" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_all"
                    android:id="@+id/cancelAllPendingOrdersTextView"
                    android:layout_weight="0.18"
                    android:padding="0dp"
                    android:textSize="12sp"
                    android:background="@drawable/buttonborder"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/select_ti"
                    android:id="@+id/selectTIPendingOrder"
                    android:layout_weight="0.18"
                    android:gravity="right" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tiPendingOrderSpinner"
                    android:layout_weight="0.25"
                    android:background="@drawable/abc_spinner_textfield_background_material" />
            </LinearLayout>

            <GridView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pendingOrderHeaderGridView"
                android:textFilterEnabled="false"
                android:clickable="false"
                android:drawSelectorOnTop="false"
                android:scrollingCache="false"
                android:fastScrollAlwaysVisible="false"
                android:verticalSpacing="@dimen/my_verticalspacing" />

            <GridView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pendingOrderGridView"
                android:textFilterEnabled="false"
                android:clickable="false"
                android:drawSelectorOnTop="false"
                android:scrollingCache="true"
                android:nestedScrollingEnabled="true"
                android:fastScrollEnabled="false"
                android:fastScrollAlwaysVisible="false"
                android:verticalSpacing="@dimen/my_verticalspacing" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:layout_weight="0.5"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/closed_orders"
                    android:id="@+id/closedOrderTextView"
                    android:layout_weight="0.39" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"
                    android:id="@+id/clearClosedOrdersTextView"
                    android:layout_weight="0.18"
                    android:textSize="12sp"
                    android:background="@drawable/buttonborder"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/select_ti"
                    android:id="@+id/selectTIClosedOrder"
                    android:layout_weight="0.18"
                    android:gravity="right" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tiClosedOrderSpinner"
                    android:layout_weight="0.25"
                    android:background="@drawable/abc_spinner_textfield_background_material" />

            </LinearLayout>

            <GridView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/closedOrderHeaderGridView"
                android:scrollingCache="false"
                android:verticalSpacing="@dimen/my_verticalspacing" />

            <GridView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/closedOrderGridView"
                android:nestedScrollingEnabled="true"
                android:fastScrollAlwaysVisible="false"
                android:fastScrollEnabled="false"
                android:scrollingCache="true"
                android:verticalSpacing="@dimen/my_verticalspacing" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
